--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
-    "embla-carousel-react": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.4",
